--- a/sammcccainlab01.html
+++ b/sammcccainlab01.html
@@ -10,7 +10,7 @@
 <body>
 Sam McCain is a Senior at Syracuse University majoring in Applied Data Analytics with a concentration in Cybersecurity. 
 Sam creates machine learning models that examine trends in public health data, and predict the outcome of sports games in Python and R. 
-Outside of academics, enjoys cooking, following baseball and football, exercising regularly, and playing Nintendo games.
+Outside of academics, enjoys cooking, following baseball and football, exercising regularly, and playing Mario Kart.
 </body>
 </html>
 
