--- a/sammcccainlab02.html
+++ b/sammcccainlab02.html
@@ -15,6 +15,15 @@
 <p>Sam McCain is a Senior at Syracuse University majoring in Applied Data Analytics with a concentration in Cybersecurity. 
 Sam creates<strong> machine learning models </strong>that examine trends in public health data, and predict the outcome of sports games in <strong>Python and R</strong>. 
 Outside of academics, enjoys cooking, following baseball and football, exercising regularly, and playing Mario Kart.</p>
+
+<h2> Coding Languages </h2>
+
+<ul>
+    <li> Python </li>
+    <li> R Studio</li>
+    <li> SQL </li>
+    <li> HTML </li>
+</ul>
 &copy; &#50; &#48; &#50; &#53;<hr>
 </body>
 </html>
