--- a/class03_notes.html
+++ b/class03_notes.html
@@ -7,9 +7,13 @@
 <p>
     <a href="https://www.google.com"></a>
 </p>
+<p>
+    This links goes to <a href="https://amazon.com"> Amazon
+</p>
 
-
-
+<p>
+    <img source = "...."
+</p>
 </html>
 
 
