--- a/Lab03/sammccainlab03.html/contact.html
+++ b/Lab03/sammccainlab03.html/contact.html
@@ -12,6 +12,8 @@
 
     <h2> Address </h2>
     <p> Hinds Hall, 343, Syracuse, NY 13244</p>
-    <p> Sam's LinkedIn <a href="www.linkedin.com/in/sammccain"></a> Profile </p>
+    <p><a href="samccain@syr.edu"> Sam McCain Email</a></p>
+    <p> Sam's LinkedIn <a href="www.linkedin.com/in/sammccain" Profile ></a>  
+    
 </body>
 </html>
