--- a/Lab03/sammccainlab03.html/contact.html
+++ b/Lab03/sammccainlab03.html/contact.html
@@ -12,8 +12,8 @@
 
     <h2> Address </h2>
     <p> Hinds Hall, 343, Syracuse, NY 13244</p>
-    <p><a href="samccain@syr.edu"> Sam McCain's Email</a></p>
-    <p> Sam's LinkedIn <a href="www.linkedin.com/in/sammccain" Profile ></a>  
+    <p><a href="mailto:samccain@syr.edu"> Sam McCain's Email</a></p>
+    <p> Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain"> Profile </a>  
     
 </body>
 </html>
