--- a/Lab03/contact.html
+++ b/Lab03/contact.html
@@ -14,7 +14,7 @@
     <p> Hinds Hall, 343, Syracuse, NY 13244</p>
     <p><a href="mailto:samccain@syr.edu"> Sam McCain's Email</a></p>
     <p> Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain"> Profile </a></p>
-    <p><img src = "../Images/InBug-White.png"></p>
+    <p><img src = "../Images/LI-In-Bug.png"></p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5832.30470358251!2d-76.13594292395538!3d43.03822589198825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1757537551613!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
