--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -8,5 +8,13 @@
 </head>
 
 <body>
+    <!-- -->
     <h1> Tables </h1>
+    <table>
+        <caption>Population</caption>
+
+
+    </table>
 </body>
+
+</html>
