--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -8,11 +8,15 @@
 </head>
 
 <body>
-    <!-- -->
+    <!-- tr = row, caption = headers -->
     <h1> Tables </h1>
-    <table>
+    <table border="2">
         <caption>Population</caption>
-
+        <tr>
+            <th>Country</th>
+            <th>Population</th>
+            <th>Percentage</th>
+        </tr>
 
     </table>
 </body>
