--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -17,6 +17,11 @@
             <th>Population</th>
             <th>Percentage</th>
         </tr>
+        <tr>
+            <td>China</td>
+            <td>1,400,000</td>
+            <td>18.0%</td>
+        </tr>
 
     </table>
 </body>
