--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -22,7 +22,11 @@
             <td>1,400,000</td>
             <td>18.0%</td>
         </tr>
-
+        <tr>
+            <td>India</td>
+            <td>1,365,000</td>
+            <td>17.5s</td>
+        </tr>
     </table>
 </body>
 
