--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -25,9 +25,14 @@
         <tr>
             <td>India</td>
             <td>1,365,000</td>
-            <td>17.5s</td>
+            <td>17.5%</td>
         </tr>
     </table>
+
+    <h1> Forms </h1>
+    <form action= "" method ="">
+        <input type="text" id="fname" name="fname">
+    </form>
 </body>
 
 </html>
