--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -31,6 +31,7 @@
 
     <h1> Forms </h1>
     <form action= "" method ="">
+        <label for="fname"> First Name:</label>
         <input type="text" id="fname" name="fname">
     </form>
 </body>
