--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -31,7 +31,7 @@
 
     <h1> Forms </h1>
     <form action= "" method ="">
-        <label for="fname"> First Name: </label>
+        <label for="fname"> First Name: </label><br>
         <input type="text" id="fname" name="fname">
     </form>
 </body>
