--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -32,7 +32,11 @@
     <h1> Forms </h1>
     <form action= "" method ="">
         <label for="fname"> First Name: </label><br>
-        <input type="text" id="fname" name="fname">
+        <input type="text" id="fname" name="fname"><br>
+        <br>
+        <label for="comments"> Comments:</label><br>
+        <textarea id="comments" name="comments"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima enim ex repellat magni odio ab, quia exercitationem doloremque eum! Expedita odio consequuntur maxime impedit doloribus non alias voluptatum sed nemo?
+        </textarea>
     </form>
 </body>
 
