--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -35,8 +35,10 @@
         <input type="text" id="fname" name="fname"><br>
         <br>
         <label for="comments"> Comments:</label><br>
-        <textarea id="comments" name="comments"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima enim ex repellat magni odio ab, quia exercitationem doloremque eum! Expedita odio consequuntur maxime impedit doloribus non alias voluptatum sed nemo?
+        <textarea id="comments" name="comments" roww="6"> Lorem Impsum
         </textarea>
+        <br>
+        <input type="submit" value = "Send Form">
     </form>
 </body>
 
