--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -38,6 +38,15 @@
         <textarea id="comments" name="comments" roww="6"> Lorem Impsum
         </textarea>
         <br>
+        <p> Please Select Your Age:</p>
+            <label for="age1">0-30</label>
+            <input type="radio" id="age1" name = age value="30"><br>
+            <label for="age2">31-60</label>
+            <input type="radio" id="age2" name = age value="60"><br>
+            <label for="age3">61-100</label>
+            <input type="radio" id="age3" name = age value="100"><br>
+        <br>
+        <br>
         <input type="submit" value = "Send Form">
     </form>
 </body>
