--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -39,12 +39,12 @@
         </textarea>
         <br>
         <p> Please Select Your Age:</p>
-            <label for="age1">0-30</label>
-            <input type="radio" id="age1" name = age value="30"><br>
-            <label for="age2">31-60</label>
-            <input type="radio" id="age2" name = age value="60"><br>
-            <label for="age3">61-100</label>
-            <input type="radio" id="age3" name = age value="100"><br>
+            <input type="radio" id="age1" name = age value="30">
+            <label for="age1">0-30</label><br>
+            <input type="radio" id="age2" name = age value="60">
+            <label for="age2">31-60</label><br>
+            <input type="radio" id="age3" name = age value="100">
+            <label for="age3">61-100</label><br>
         <br>
         <br>
         <input type="submit" value = "Send Form">
