--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -45,6 +45,16 @@
             <label for="age2">31-60</label><br>
             <input type="radio" id="age3" name = age value="100">
             <label for="age3">61-100</label><br>
+
+
+            <p> What type of Vehicle do you have?</p>
+
+            <input type = "checkbox" id = "vehicle1" name ="vehicle1" value="car">
+            <label for="vehicle1">I have a car</label>
+            <input type = "checkbox" id = "vehicle2" name ="vehicle2" value="bike">
+            <label for="vehicle2">I have a bike</label>
+            <input type = "checkbox" id = "vehicle3" name ="vehicle3" value="boat">
+            <label for="vehicle3">I have a boat</label>
         <br>
         <br>
         <input type="submit" value = "Send Form">
