--- a/Class_Notes/classnotes04.html
+++ b/Class_Notes/classnotes04.html
@@ -55,6 +55,14 @@
             <label for="vehicle2">I have a bike</label>
             <input type = "checkbox" id = "vehicle3" name ="vehicle3" value="boat">
             <label for="vehicle3">I have a boat</label>
+
+
+            <label for="cars">Choose a car:</label>
+            <select>
+                <option value="Audi">Audi</option>
+                <option value="mercedes">Mercedes</option>
+                <option value="volvo">BMW</option>
+            </select>
         <br>
         <br>
         <input type="submit" value = "Send Form">
