--- a/Lab05/lab05.html
+++ b/Lab05/lab05.html
@@ -55,7 +55,7 @@
             <input type = "checkbox" id = "contact2" name ="contact2" value="TextMessage">
             <label for="contact2">Text Message</label>
             <input type = "checkbox" id = "contact3" name ="contact3" value="LinkedIn">
-            <label for="contact3">I have a boat</label>
+            <label for="contact3">LinkedIn</label>
         <br>
         <br>
         <input type="submit" value = "Send Form">
