--- a/Lab05/lab05.html
+++ b/Lab05/lab05.html
@@ -38,6 +38,31 @@
             <td>HTML</td>
             <td>Proficient</td>
         </tr>
+        <tr>
+            <td>Coding</td>
+            <td>JavaScript</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>Soft Skills</td>
+            <td>Customer Service</td>
+            <td>Expert</td>
+        </tr>
+        <tr>
+            <td>Software</td>
+            <td>Tableau</td>
+            <td>Proficient</td>
+        </tr>
+        <tr>
+            <td>Software</td>
+            <td>Microsoft Excel</td>
+            <td>Master</td>
+        </tr>
+        <tr>
+            <td>Software</td>
+            <td>Wireshark</td>
+            <td>Proficient</td>
+        </tr>
     </table>
     <h1> Forms </h1>
     <form action= "https://formspree.io/f/mvgbebzj" method ="POST">
@@ -45,7 +70,7 @@
         <input type="text" id="name" name="name"><br>
         <br>
         <label for="message"> Message For Sam:</label><br>
-        <textarea id="message" name="message" roww="6"> Lorem Impsum
+        <textarea id="message" name="message" roww="6"> 
         </textarea>
         <br>
             <p> How would you like to contact Sam?</p>
