--- a/Lab05/lab05.html
+++ b/Lab05/lab05.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <table border="2">
+    <table>
         <caption> Skills </caption>
         <tr>
             <th>Category</th>
@@ -70,7 +70,7 @@
         <input type="text" id="name" name="name"><br>
         <br>
         <label for="message"> Message For Sam:</label><br>
-        <textarea id="message" name="message" roww="6"> 
+        <textarea id="message" name="message" row="6"> 
         </textarea>
         <br>
             <p> How would you like to contact Sam?</p>
