--- a/Lab05/contact05.html
+++ b/Lab05/contact05.html
@@ -37,7 +37,7 @@
         <br>
         <input type="submit" value = "Send Form">
     </form>
-    <img src = "../Images/LI-In-Bug.png">
+    <img src = "../Images/lab05-LI-Bug.png">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5832.30470358251!2d-76.13594292395538!3d43.03822589198825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1757537551613!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
