--- a/Class_Notes/classnotes07.html
+++ b/Class_Notes/classnotes07.html
@@ -6,6 +6,8 @@
     <title> CSS Colors</title>
     <style> 
         h1 {color: #D44500;} 
+        a:link{color: maroon;}
+        a:visited{color:gray}
     </style> <!-- Cuse Colors--> 
 </head>
 <body>
