--- a/Class_Notes/classnotes07.html
+++ b/Class_Notes/classnotes07.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1> CSS Hex Colors</h1>
-    <p> Paragraph 1 </p>
+    <p> Favorite <a href="https://baseballsavant.mlb.com/savant-player/ketel-marte-606466?stats=statcast-r-hitting-mlb"> Player</a></p>
     <p> Paragraph 2 </p> 
 </body>
 </html>
