folder rename + background image test

--- a/Class_Notes/classnotes07.html
+++ b/Class_Notes/classnotes07.html
@@ -5,14 +5,18 @@
     <meta charset="utf-8">
     <title> CSS Colors</title>
     <style> 
-        h1 {color: #D44500;} 
+        h1 {color: #D44500;
+            background-color: black;} 
         a:link{color: maroon;}
         a:visited{color:gray}
-    </style> <!-- Cuse Colors--> 
+        a:hover {color: #db2713}
+        .First {}
+     </style> <!-- Cuse Colors--> 
 </head>
+
 <body>
     <h1> CSS Hex Colors</h1>
-    <p> Favorite <a href="https://baseballsavant.mlb.com/savant-player/ketel-marte-606466?stats=statcast-r-hitting-mlb"> Player</a></p>
-    <p> Paragraph 2 </p> 
+    <p class="First"> Favorite <a href="https://baseballsavant.mlb.com/savant-player/ketel-marte-606466?stats=statcast-r-hitting-mlb"> Hitter</a></p>
+    <p> Favorite <a href="https://baseballsavant.mlb.com/savant-player/jake-arrieta-453562?stats=statcast-r-pitching-mlb"> Pitcher</a></p> 
 </body>
 </html>
