--- a/Class_Notes/classnotes07.html
+++ b/Class_Notes/classnotes07.html
@@ -10,8 +10,8 @@
         a:link{color: maroon;}
         a:visited{color:gray}
         a:hover {color: #db2713}
-        .First {}
-     </style> <!-- Cuse Colors--> 
+        .First {background-image: url("../Final_Project/Project-Media/Diagrams/3Buzz.svg");} 
+     </style> <!-- Cuse Colors--> <!-- Background Image is a block element, takes up whole screen-->
 </head>
 
 <body>
