Final Class #7 Notes

--- a/Class_Notes/classnotes07.html
+++ b/Class_Notes/classnotes07.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang ="en">
-    <!-- CSS Styles -->
+    <!-- CSS Styles Part #2-->
 <head>
     <meta charset="utf-8">
     <title> CSS Colors</title>
     <style> 
         h1 {color: #D44500;
-            background-color: black;} 
+            background-color: black;
+            padding: 1em 0em 1em 0em;
+            margin: 1em;
+            border: 2px solid #FFFFFF} 
+        body {background-color: lightpink;}
         a:link{color: maroon;}
         a:visited{color:gray}
         a:hover {color: #db2713}
         .First {background-image: url("../Final_Project/Project-Media/Diagrams/3Buzz.svg");} 
      </style> <!-- Cuse Colors--> <!-- Background Image is a block element, takes up whole screen-->
-</head>
+     <!-- Padding Tag for Elements (within the element box), top, right, bottom, left
+      Margin is outside the element box. If 1 em in margin or padding its 1em in all 4 directions-->
+     <!-- Border style sheet Thckness, Border Appearance, color of border-->
+    </head>
 
 <body>
     <h1> CSS Hex Colors</h1>
