syntax and style sheet changes

--- a/Lab07/skills07.html
+++ b/Lab07/skills07.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="bio07.html">Home</a> |
+        <a href="skills07.html">Skills</a> |
+        <a href="contact07.html">Contact</a>
+    </nav>
     <table>
         <caption> Skills </caption>
         <tr>
