--- a/Class_Notes/week8notes_floats.html
+++ b/Class_Notes/week8notes_floats.html
@@ -7,7 +7,7 @@
         <style>
             .firstimage {
                 float:left;
-                margin: 20px 20px 20px 0px;}
+                margin: 0px 1em 1em 0px;}
             .clearfloat {clear: both;}
             .secondimage {float: right;
             margin:20px 0px 20px 20px;}
@@ -29,9 +29,9 @@
 
         <p>Sinclair is responsible for 185 television stations in 86 markets, according to its website. It also runs regional sports networks.</p>
         <p>The company's stations are still on the air, and are continuing to show national and syndicated programming like talk shows and sitcoms.</p>
-        <div class="clearfloat"></div>
         <p>The problems are largely hindering local live programming, like the newscasts that typically air for multiple hours a day.</p>
         <p>Some stations struggled to produce newscasts on Sunday without writing, editing or scheduling software.</p>
+        <div class="clearfloat"></div>
         <p>Kristin Bien, a weekend anchor at Sinclair-owned WSBT 22, tweeted Sunday morning that the incident was a "corporate-wide problem."</p>
         <p>"All we are told right now is that we have technical difficulties," one journalist at a Sinclair-owned station told CNN Sunday night. "We are still told to broadcast if we can, so we're doing what we can with our live unit and weather graphics. We don't have access to our company emails or anything that requires a company log in."</p>
         <p>Biden administration ramps up efforts to secure American infrastructure from Russian and Chinese cyberattacks</p>
