image class tags

--- a/Lab08/floats-flexbox-practice.html
+++ b/Lab08/floats-flexbox-practice.html
@@ -8,6 +8,10 @@
 			.img1{float: left;
             margin-right: 1em;}
             .clear{clear: both;}
+            .img2{float: left;
+            margin-right: 1em;}
+            .img3{float: left;
+            margin-right: 1em;}
 		</style>
 	</head>
 	<body>
