--- a/Lab09/contact09.html
+++ b/Lab09/contact09.html
@@ -15,12 +15,16 @@
         <a href="contact07.html">Contact</a>
     </nav>
     <h1>Contact</h1>
-
-    <h2>Address</h2>
-    <p>Hinds Hall, 343, Syracuse, NY 13244</p>
-    <p><a href="mailto:samccain@syr.edu">Sam McCain's Email</a></p>
-    <p>Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain">Profile</a></p>
-    
+    <div>
+        <div>
+        <h2>Address</h2>
+        <p>Hinds Hall, 343, Syracuse, NY 13244</p>
+        </div>
+        <div>
+        <p><a href="mailto:samccain@syr.edu">Sam McCain's Email</a></p>
+        <p>Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain">Profile</a></p>
+        </div>
+    </div>
     <h1>Forms</h1>
     <form action="https://formspree.io/f/mvgbebzj" method="POST">
         <label for="name">Your Name:</label><br>
