--- a/Lab09/contact09.html
+++ b/Lab09/contact09.html
@@ -7,6 +7,9 @@
     <title>Contact Page</title>
     <link rel="stylesheet" href="lab07styles.css">
 </head>
+<style>
+
+</style>
 
 <body>
     <nav>
@@ -22,34 +25,38 @@
         </div>
         <div>
         <p><a href="mailto:samccain@syr.edu">Sam McCain's Email</a></p>
+        <img src="../Images/lab05-LI-Bug.png" alt="LinkedIn Logo">
         <p>Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain">Profile</a></p>
         </div>
     </div>
-    <h1>Forms</h1>
-    <form action="https://formspree.io/f/mvgbebzj" method="POST">
-        <label for="name">Your Name:</label><br>
-        <input type="text" id="name" name="name"><br><br>
+    <div>
+        <div>
+        <h1>Forms</h1>
+            <form action="https://formspree.io/f/mvgbebzj" method="POST">
+            <label for="name">Your Name:</label><br>
+            <input type="text" id="name" name="name"><br><br>
 
-        <label for="message">Message For Sam:</label><br>
-        <textarea id="message" name="message" rows="6"></textarea><br>
+            <label for="message">Message For Sam:</label><br>
+            <textarea id="message" name="message" rows="6"></textarea><br>
 
-        <p>How would you like to contact Sam?</p>
-        <input type="checkbox" id="contact1" name="contact1" value="email">
-        <label for="contact1">Email</label>
-        <input type="checkbox" id="contact2" name="contact2" value="TextMessage">
-        <label for="contact2">Text Message</label>
-        <input type="checkbox" id="contact3" name="contact3" value="LinkedIn">
-        <label for="contact3">LinkedIn</label><br><br>
+            <p>How would you like to contact Sam?</p>
+            <input type="checkbox" id="contact1" name="contact1" value="email">
+            <label for="contact1">Email</label>
+            <input type="checkbox" id="contact2" name="contact2" value="TextMessage">
+            <label for="contact2">Text Message</label>
+            <input type="checkbox" id="contact3" name="contact3" value="LinkedIn">
+            <label for="contact3">LinkedIn</label><br><br>
 
-        <input type="submit" value="Send Form">
-    </form>
-
-    <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5832.30470358251!2d-76.13594292395538!3d43.03822589198825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1757537551613!5m2!1sen!2sus" 
+            <input type="submit" value="Send Form">
+            </form>
+        </div>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5832.30470358251!2d-76.13594292395538!3d43.03822589198825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1757537551613!5m2!1sen!2sus" 
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
 
-    <br>
-    <img src="../Images/lab05-LI-Bug.png" alt="LinkedIn Logo">
+    
 </body>
 </html>
