--- a/Lab09/contact09.html
+++ b/Lab09/contact09.html
@@ -5,10 +5,10 @@
 <head> 
     <meta charset="utf-8">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="lab07styles.css">
+    <link rel="stylesheet" href="lab09styles.css">
 </head>
 <style>
-
+ 
 </style>
 
 <body>
@@ -18,18 +18,18 @@
         <a href="contact07.html">Contact</a>
     </nav>
     <h1>Contact</h1>
-    <div>
-        <div>
+    <div class="flex1">
+        <div class="adressflex">
         <h2>Address</h2>
         <p>Hinds Hall, 343, Syracuse, NY 13244</p>
         </div>
         <div>
         <p><a href="mailto:samccain@syr.edu">Sam McCain's Email</a></p>
-        <img src="../Images/lab05-LI-Bug.png" alt="LinkedIn Logo">
+        <img class="linkedinimg" src="../Images/lab05-LI-Bug.png" alt="LinkedIn Logo">
         <p>Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain">Profile</a></p>
         </div>
     </div>
-    <div>
+    <div class="flex2">
         <div>
         <h1>Forms</h1>
             <form action="https://formspree.io/f/mvgbebzj" method="POST">
