--- a/Class_Notes/week10notes.html
+++ b/Class_Notes/week10notes.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Unit 10 Notes Responsive Design</title>
         <style>
             body {font-family: Arial, Helvetica, sans-serif;}
