--- a/Class_Notes/week10notes.html
+++ b/Class_Notes/week10notes.html
@@ -8,10 +8,18 @@
             body {font-family: Arial, Helvetica, sans-serif;}
             .row1 { 
                 padding: 80px;
-                margin-top: 40px;}
+                margin-top: 40px;
+                display: flex;
+                flex-wrap: wrap;
+            }
             .row1 div {
                 padding: 40px;
             }
+            img {max-width: 100%;}
+            .bannersmall {display: none;}
+            @media only screen and (max-width: 760px) {
+                    .banner {display: none;}
+                }
         </style>
     </head>
     <body>
