viewport tag and nav changes

--- a/Lab10/contact10.html
+++ b/Lab10/contact10.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head> 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
     <link rel="stylesheet" href="lab09styles.css">
 </head>
 <body>
     <nav>
-        <a href="bio08.html">Home</a> |
-        <a href="skills09.html">Skills</a> |
-        <a href="contact09.html">Contact</a>
+        <a href="bio10.html">Home</a> |
+        <a href="skills10.html">Skills</a> |
+        <a href="contact10.html">Contact</a>
     </nav>
     <h1>Contact</h1>
 
