week 11 lecture notes and participation

--- a/Class_Notes/week11notes.html
+++ b/Class_Notes/week11notes.html
@@ -9,10 +9,17 @@
 <style>
     h1{cursor: pointer;}
 </style>
+<script>
+    //function SecondBlock() {
+     //   alert("Alert Number 2")}
+    function clicky () {
+        alert('This was because of a click')
+    }
+</script>
 <body>
     <script>alert("I am sending an Alert!")</script>
     <h1>Classic First Java Script</h1>
     <p>Lorem Ipsum fnurgfuifb2 f jwb fjwbfiugfiuwef</p>
-    <p>hrufgheiuqghtriuhgikwbTQHFOIQhfoiuhfkjasbfqHFOQUIHFDAUFBKJAFHWIUEOHFOHf;dbgu;wbg</p>
+    <p onmouseover="SecondBlock();">hrufgheiuqghtriuhgikwbTQHFOIQhfoiuhfkjasbfqHFOQUIHF <a href="#" onclick="clicky();">DAUFBKJ</a>AFHWIUE OHFOHf;dbgu;wbg  afhuibfbfajbfaj fjbfijabfnkJfbkajf </p>
 </body>
 </html>
