--- a/Lab13/skills13.html
+++ b/Lab13/skills13.html
@@ -7,74 +7,77 @@
     <link rel="stylesheet" href="lab13skillstyles.css">
 </head>
 <body>
+    <a href="#main" class="skip-link">Skip to main content</a>
+    
     <nav>
         <a href="bio13.html">Home</a> <span>|</span>
         <a href="skills13.html">Skills</a><span>|</span>
         <a href="contact13.html">Contact</a>
     </nav>
 
-    
-    <h1 class="pageheading">Technical Skills</h1>
+    <main id="main">
+        <h1 class="pageheading">Technical Skills</h1>
 
-    <div class="skillsflex">
-        <div class="skillstable">
-            <table>
-                <caption>Skills</caption>
-                <tr>
-                    <th>Category</th>
-                    <th>Skill</th>
-                    <th>Competency Level</th>
-                </tr>
-                <tr>
-                    <td>Coding</td>
-                    <td>R Studio</td>
-                    <td>Master</td>
-                </tr>
-                <tr class="evenrow">
-                    <td>Coding</td>
-                    <td>Python</td>
-                    <td>Proficient</td>
-                </tr>
-                <tr>
-                    <td>Coding</td>
-                    <td>SQL</td>
-                    <td>Proficient</td>
-                </tr>
-                <tr class="evenrow">
-                    <td>Coding</td>
-                    <td>HTML</td>
-                    <td>Proficient</td>
-                </tr>
-                <tr>
-                    <td>Coding</td>
-                    <td>JavaScript</td>
-                    <td>Intermediate</td>
-                </tr>
-                <tr class="evenrow">
-                    <td>Soft Skills</td>
-                    <td>Customer Service</td>
-                    <td>Expert</td>
-                </tr>
-                <tr>
-                    <td>Software</td>
-                    <td>Tableau</td>
-                    <td>Proficient</td>
-                </tr>
-                <tr class="evenrow">
-                    <td>Software</td>
-                    <td>Microsoft Excel</td>
-                    <td>Master</td>
-                </tr>
-                <tr>
-                    <td>Software</td>
-                    <td>Wireshark</td>
-                    <td>Proficient</td>
-                </tr>
-            </table>
+        <div class="skillsflex">
+            <div class="skillstable">
+                <table>
+                    <caption>Skills</caption>
+                    <tr>
+                        <th scope="col">Category</th>
+                        <th scope="col">Skill</th>
+                        <th scope="col">Competency Level</th>
+                    </tr>
+                    <tr>
+                        <td>Coding</td>
+                        <td>R Studio</td>
+                        <td>Master</td>
+                    </tr>
+                    <tr class="evenrow">
+                        <td>Coding</td>
+                        <td>Python</td>
+                        <td>Proficient</td>
+                    </tr>
+                    <tr>
+                        <td>Coding</td>
+                        <td>SQL</td>
+                        <td>Proficient</td>
+                    </tr>
+                    <tr class="evenrow">
+                        <td>Coding</td>
+                        <td>HTML</td>
+                        <td>Proficient</td>
+                    </tr>
+                    <tr>
+                        <td>Coding</td>
+                        <td>JavaScript</td>
+                        <td>Intermediate</td>
+                    </tr>
+                    <tr class="evenrow">
+                        <td>Soft Skills</td>
+                        <td>Customer Service</td>
+                        <td>Expert</td>
+                    </tr>
+                    <tr>
+                        <td>Software</td>
+                        <td>Tableau</td>
+                        <td>Proficient</td>
+                    </tr>
+                    <tr class="evenrow">
+                        <td>Software</td>
+                        <td>Microsoft Excel</td>
+                        <td>Master</td>
+                    </tr>
+                    <tr>
+                        <td>Software</td>
+                        <td>Wireshark</td>
+                        <td>Proficient</td>
+                    </tr>
+                </table>
+            </div>
+            <figure class="skillsimage">
+                <img src="https://peopel-su.github.io/ist263/images/skill_3775447.png" alt="Technical skills icon showing gears and tools">
+            </figure>
         </div>
-        <div class="skillsimage">
-            <img src="https://peopel-su.github.io/ist263/images/skill_3775447.png" alt="Skills Icon">
-        </div>
-    </div>
+    </main>
 </body>
 </html>
