--- a/Lab13/contact13.html
+++ b/Lab13/contact13.html
@@ -24,9 +24,9 @@
                 <p>Hinds Hall, 343, Syracuse, NY 13244</p>
             </div>
             <div class="linksbox">
-                <p><a href="mailto:samccain@syr.edu">Sam McCain's Email</a></p>
+                <p><a href="mailto:samccain@syr.edu"><strong>Sam McCain's Email</strong></a></p>
                 <img class="linkedinimg" src="../Images/lab05-LI-Bug.png" alt="LinkedIn logo" style="width:40px;height:auto;">
-                <p>Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain">Profile</a></p>
+                <p><strong>Sam's LinkedIn <a href="https://www.linkedin.com/in/sammccain">Profile</a></strong></p>
             </div>
         </div>
 
