google fonts for lab 14

--- a/Lab13/skills13.html
+++ b/Lab13/skills13.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
     <link rel="stylesheet" href="lab13skillstyles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <a href="#main" class="skip-link">Skip to main content</a>
-    
+
     <nav>
         <a href="bio13.html">Home</a> <span>|</span>
         <a href="skills13.html">Skills</a><span>|</span>
@@ -75,9 +80,11 @@
                 </table>
             </div>
             <figure class="skillsimage">
-                <img src="https://peopel-su.github.io/ist263/images/skill_3775447.png" alt="Technical skills icon showing gears and tools">
+                <img src="https://peopel-su.github.io/ist263/images/skill_3775447.png"
+                    alt="Technical skills icon showing gears and tools">
             </figure>
         </div>
     </main>
 </body>
+
 </html>
