favicon to project

--- a/Project_06/index.html
+++ b/Project_06/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFL Defensive Coverages - Home</title>
     <link rel="stylesheet" href="projectstyles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
     <header>
         <h1>NFL Defensive Coverages</h1>
@@ -21,7 +24,12 @@
     <main>
         <section>
             <h2>Coverage Descriptions</h2>
-            <p>The modern NFL is almost like gladiator chess. Each player with designated roles and responsibilities, plays scripted and practiced over and over again by teams in practice. With the recent explosion in modern day passing offenses, defensive coordinators across the league have been scrambling to find the right defensive strategy to limit the effectiveness of the modern pass. This website highlights the strengths and weaknesses of the staples of the modern day passing defense, with diagrams and teach tape examples. </p>
+            <p>The modern NFL is almost like gladiator chess. Each player with designated roles and responsibilities,
+                plays scripted and practiced over and over again by teams in practice. With the recent explosion in
+                modern day passing offenses, defensive coordinators across the league have been scrambling to find the
+                right defensive strategy to limit the effectiveness of the modern pass. This website highlights the
+                strengths and weaknesses of the staples of the modern day passing defense, with diagrams and teach tape
+                examples. </p>
         </section>
 
         <article id="cover-0">
@@ -29,39 +37,54 @@
             <figure class="diagram">
                 <img src="../Final_Project/Project-Media/Diagrams/Cover0.svg" alt="Cover 0 defensive coverage diagram">
             </figure>
-            <p>Cover 0 is a man-to-man blitz coverage where each defender in coverage is playing man to man coverage on the 5 receivers for the offense. Cover 0 can be either a 5 or a 6-man blitz. A 6-man blitz in cover 0 indicates 1 on 1 coverage for each receiver, a 5 man blitz in cover 0 means there's a double team on one receiver.</p>
+            <p>Cover 0 is a man-to-man blitz coverage where each defender in coverage is playing man to man coverage on
+                the 5 receivers for the offense. Cover 0 can be either a 5 or a 6-man blitz. A 6-man blitz in cover 0
+                indicates 1 on 1 coverage for each receiver, a 5 man blitz in cover 0 means there's a double team on one
+                receiver.</p>
         </article>
 
         <article id="cover-1">
             <h3>Cover 1</h3>
             <figure class="diagram">
-                <img src="../Final_Project/Project-Media/Diagrams/1Robber.svg" alt="Cover 1 Robber defensive coverage diagram">
+                <img src="../Final_Project/Project-Media/Diagrams/1Robber.svg"
+                    alt="Cover 1 Robber defensive coverage diagram">
             </figure>
-            <p>Cover 1 is a man to man coverage concept with one safety covering the deep middle of the field and/or another safety/linebacker covering the middle of the field 5-10 yards beyond the L.O.S. who is called a "Robber". If cover 1 is called with a 5 man blitz this limits the defenses ability to have a robber.</p>
+            <p>Cover 1 is a man to man coverage concept with one safety covering the deep middle of the field and/or
+                another safety/linebacker covering the middle of the field 5-10 yards beyond the L.O.S. who is called a
+                "Robber". If cover 1 is called with a 5 man blitz this limits the defenses ability to have a robber.</p>
         </article>
 
         <article id="cover-2">
             <h3>Cover 2</h3>
             <figure class="diagram">
-                <img src="../Final_Project/Project-Media/Diagrams/2Wild.svg" alt="Cover 2 Wild defensive coverage diagram">
+                <img src="../Final_Project/Project-Media/Diagrams/2Wild.svg"
+                    alt="Cover 2 Wild defensive coverage diagram">
             </figure>
-            <p>Cover 2 is a split-field 7 man coverage with 5 underneath defenders and 2 deep defenders. A popular variant of Cover 2 with 1 minor difference is Tampa 2, where a Linebacker becomes a deep 1/3rd defender and tries to bait the Quarterback into making mistakes over the middle of the field.</p>
+            <p>Cover 2 is a split-field 7 man coverage with 5 underneath defenders and 2 deep defenders. A popular
+                variant of Cover 2 with 1 minor difference is Tampa 2, where a Linebacker becomes a deep 1/3rd defender
+                and tries to bait the Quarterback into making mistakes over the middle of the field.</p>
         </article>
 
         <article id="cover-3">
             <h3>Cover 3</h3>
             <figure class="diagram">
-                <img src="../Final_Project/Project-Media/Diagrams/3Strap.svg" alt="Cover 3 Strap defensive coverage diagram">
+                <img src="../Final_Project/Project-Media/Diagrams/3Strap.svg"
+                    alt="Cover 3 Strap defensive coverage diagram">
             </figure>
-            <p>Cover 3 is a 7 man coverage concept with 4 underneath defenders and 3 deep defenders. Cover 3 is extremely popular due to its ability to both limit big plays and commit extra bodies for run defense. Can also be played as a 6 man coverage concept known as a "Fire Zone".</p>
+            <p>Cover 3 is a 7 man coverage concept with 4 underneath defenders and 3 deep defenders. Cover 3 is
+                extremely popular due to its ability to both limit big plays and commit extra bodies for run defense.
+                Can also be played as a 6 man coverage concept known as a "Fire Zone".</p>
         </article>
 
         <article id="cover-4">
             <h3>Cover 4</h3>
             <figure class="diagram">
-                <img src="../Final_Project/Project-Media/Diagrams/Quads.svg" alt="Cover 4 Quarters defensive coverage diagram">
+                <img src="../Final_Project/Project-Media/Diagrams/Quads.svg"
+                    alt="Cover 4 Quarters defensive coverage diagram">
             </figure>
-            <p>Cover 4 is a split field 7 man coverage concept with 3 underneath defenders and 4 deep defenders. Commonly used on passing downs and is very good against all passing formations but is very weak against the run.</p>
+            <p>Cover 4 is a split field 7 man coverage concept with 3 underneath defenders and 4 deep defenders.
+                Commonly used on passing downs and is very good against all passing formations but is very weak against
+                the run.</p>
         </article>
     </main>
 
@@ -69,4 +92,5 @@
         <p>Content created with access to NFL+ Premium subscription</p>
     </footer>
 </body>
+
 </html>
