Fix grammar in index.html and remove modal

--- a/Project_06/index.html
+++ b/Project_06/index.html
@@ -24,11 +24,11 @@
     <main>
         <section>
             <h2>Coverage Descriptions</h2>
-            <p>The modern NFL is almost like gladiator chess. Each player with designated roles and responsibilities,
-                plays scripted and practiced over and over again by teams in practice. With the recent explosion in
-                modern day passing offenses, defensive coordinators across the league have been scrambling to find the
+            <p>The modern NFL is almost like gladiator chess. Each player has designated roles and responsibilities that
+                are practiced repeatedly. With the recent explosion in
+                modern-day passing offenses, defensive coordinators across the league have been scrambling to find the
                 right defensive strategy to limit the effectiveness of the modern pass. This website highlights the
-                strengths and weaknesses of the staples of the modern day passing defense, with diagrams and teach tape
+                strengths and weaknesses of the staples of the modern-day passing defense, with diagrams and teach tape
                 examples. </p>
         </section>
 
@@ -37,9 +37,10 @@
             <figure class="diagram">
                 <img src="../Final_Project/Project-Media/Diagrams/Cover0.svg" alt="Cover 0 defensive coverage diagram">
             </figure>
-            <p>Cover 0 is a man-to-man blitz coverage where each defender in coverage is playing man to man coverage on
-                the 5 receivers for the offense. Cover 0 can be either a 5 or a 6-man blitz. A 6-man blitz in cover 0
-                indicates 1 on 1 coverage for each receiver, a 5 man blitz in cover 0 means there's a double team on one
+            <p>Cover 0 is a man-to-man blitz coverage where each defender in coverage is playing man-to-man coverage on
+                the 5 receivers for the offense. Cover 0 can be either a 5-man or a 6-man blitz. A 6-man blitz in cover
+                0
+                indicates 1 on 1 coverage for each receiver, a 5-man blitz in cover 0 means there's a double team on one
                 receiver.</p>
         </article>
 
@@ -49,9 +50,9 @@
                 <img src="../Final_Project/Project-Media/Diagrams/1Robber.svg"
                     alt="Cover 1 Robber defensive coverage diagram">
             </figure>
-            <p>Cover 1 is a man to man coverage concept with one safety covering the deep middle of the field and/or
+            <p>Cover 1 is a man-to-man coverage concept with one safety covering the deep middle of the field and/or
                 another safety/linebacker covering the middle of the field 5-10 yards beyond the L.O.S. who is called a
-                "Robber". If cover 1 is called with a 5 man blitz this limits the defenses ability to have a robber.</p>
+                "Robber". If cover 1 is called with a 5-man blitz this limits the defenses ability to have a robber.</p>
         </article>
 
         <article id="cover-2">
