adding content section for accessibility

--- a/Project_07/index.html
+++ b/Project_07/index.html
@@ -29,7 +29,7 @@
     </header>
     <script src="script.js"></script>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Coverage Descriptions</h2>
             <p>The modern NFL is almost like gladiator chess. Each player has designated roles and responsibilities that
