--- a/Project_07/man.html
+++ b/Project_07/man.html
@@ -29,7 +29,7 @@
     </header>
     <script src="script.js"></script>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Man Coverage Overview</h2>
             <p>The coverages that will be shown on this page include Cover 0 and Cover 1</p>
