--- a/Project_07/zone.html
+++ b/Project_07/zone.html
@@ -29,7 +29,7 @@
     </header>
     <script src="script.js"></script>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Zone Coverage Overview</h2>
             <p>The coverages shown on this page will be cover 2, cover 3, cover 4, and tampa 2. These are the most
